<resources>
    <string name="app_name">UniKSystems</string>
    <string name="logo">Logo</string>
    <string name="sign_in">Увійдіть зараз</string>
    <string name="already_have_an_account">Вже є акаунт?</string>
    <string name="process">Продовжити</string>
    <string name="confirmPassword">Повторіть пароль</string>
    <string name="password">Пароль</string>
    <string name="Ivan">Іван</string>
    <string name="Petrenko">Петренко</string>
    <string name="testEmail">ivanpetrenko@gmail.com</string>
    <string name="sign_up">Зареєструватись</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterEntryData">Введіть дані відвідування</string>
    <string name="chooseLocation">Оберіть локацію</string>
    <string name="registerEntry">Зареєструвати відвідування</string>
    <string name="cropped_face">Cropped face</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="patronym">Patronym</string>
    <string name="email">Email@gmail.com</string>
    <string name="serial_number">Serial Number</string>
    <string name="exp_date">date</string>
    <string name="register_entry">Зареєструвати обличчя</string>
    <string name="exit">Вийти</string>
    <string name="last_entry">Останні відвідування</string>
    <string name="flip_camera">Flip camera</string>
    <string name="add_face">Add face</string>
    <string name="enter_student_data">Введіть дані свого студентського квитка</string>
    <string name="chooseDaye">Обрати</string>
    <string name="chooseDate">Обрати</string>
    <string name="register">Реєстрація</string>
    <string name="date1">date1</string>
    <string name="date2">date2</string>
    <string name="enter_group_code">Введіть кодування групи</string>
    <string name="enter_number">Введіть номер студентського квитка</string>
    <string name="entry">Відвідування</string>
    <string name="profile">Профіль</string>
    <string name="welcome_to">Welcome to</string>
    <string name="login">Увійти</string>
    <string name="signup">Зареєструватися</string>
    <string name="log_in_system">Увійти в систему</string>
    <string name="test_email">ivanpetrenko@gmail.com</string>
    <string name="send">Надіслати</string>
    <string name="e_mail">E-mail</string>
    <string name="forgot_password">Забули пароль?</string>
    <string name="input_password">Введіть пароль</string>
    <string name="user_tag">User tag</string>
    <string name="admin_panel">Панель адміністратора</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_name">Name</string>
    <string name="confirm_face_register">Підтвердити реєстрацію обличчя</string>
    <string name="user_image">User image</string>
    <string name="delete_account">Delete account</string>
    <string name="add_entry">Додати відвідування</string>
    <string name="faculty_type">Факультет(відділення), структурний підрозділ, форма навчання</string>
    <string name="faculty_name">Faculty name</string>
    <string name="group">Група</string>
    <string name="group_name">Group</string>
    <string name="click_to_add_photo">Натисність вище, щоб додати ваше фото :)</string>
    <string name="input_group_code">Введіть кодування групи</string>
    <string name="date_of_issue">Дата видачі:</string>
    <string name="choose">Обрати</string>
    <string name="create_profile">Створити профіль</string>
    <string name="choose_faculty">Оберіть факультет/навчально-науковий інститут:</string>
    <string name="input_teacher_data">Введіть дані пропускного документа</string>
    <string name="Surname">Прізвище</string>
    <string name="Name">Ім\'я</string>
    <string name="Patronymic">По-батькові</string>
    <string name="input_student_id_number">Введіть номер студентського квитка</string>
    <string name="input_teacher_id_number">Введіть номер пропусного документа</string>
    <string name="input_position">Введіть посаду</string>
    <string name="valid_untill">Дійсний до:</string>
    <string name="all_entries">Всі відвідування</string>
    <string name="place">Place</string>
    <string name="surname_eng">Surname</string>
    <string name="date_time">Date/time</string>
    <string name="delete_visit">Delete visit</string>
    <string name="user_visit_photo">User visit photo</string>
    <string name="enter_email_to_restore_account">Введіть адресу електронної пошти, яку ви використовували при створенні облікового запису, щоб надіслати лист на відновлення паролю.</string>
    <string name="approve">Підтвердження</string>
    <string name="visit">Візит</string>
    <string name="time">TIME</string>
    <string name="name1">NAME</string>
    <string name="surname1">SURNAME</string>
    <string name="place1">PLACE</string>
    <string name="register_visit">Зареєструвати візит</string>
    <string name="education_form">Education form</string>
    <string name="faculty">Faculty</string>
    <string name="issue_date">Issue date</string>
    <string name="position">Position</string>
    <string name="dont_have_an_account">Немає акаунту?</string>
    <string name="register_now">Зареєструйтесь зараз</string>
    <string name="serial_and_number">Серія, номер</string>
    <string name="issue">Виданий</string>
    <string name="expiration">Дійсний до</string>
    <string name="edu_form">Форма навчання</string>
    <string name="position_name">Посада</string>
    <string name="expire_date">Expire date</string>
    <string name="my_visit">Мої відвідування</string>
    <string name="input_faculty">Оберіть факультет/навчально-науковий інститут:</string>
    <string name="input_education_form">Оберіть форму навчання:</string>
    <string name="create_profile2">Створити профіль</string>
</resources>