<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dlg_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@color/backgroundColor"
        android:gravity="center"
        android:text="@string/visit"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/opensansbold"/>

    <ImageView
        android:id="@+id/dlg_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cropped_face"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/registerFaceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/opensansregular"
            android:hint="@string/hint_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/registerFaceSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensansregular"
            android:hint="@string/hint_surname"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:hint="@string/chooseLocation"
        android:inputType="text"
        android:textColorHint="#8D6E63"
        android:visibility="visible"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/backgroundColor"
        android:fontFamily="@font/opensansregular"
        android:paddingBottom="10dp"
        android:text="@string/register_visit"
        android:textColor="@color/white"
        tools:ignore="TextSizeCheck" />


</LinearLayout>
