<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:gravity="center"
    tools:context=".activity.StartActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:fontFamily="@font/opensansbold"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:text="@string/login"
        android:textSize="20sp"
        android:fontFamily="@font/opensansbold"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/backgroundColor"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/signupBtn"
        android:text="@string/signup"
        android:textSize="20sp"
        android:fontFamily="@font/opensansbold"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/backgroundColor"/>

</LinearLayout>